This syntax also works on older OpenSSH versions.

Like the one that Ubuntu distributes

BUG: 355015